add urls featured hrefs

--- a/public/html/header.html
+++ b/public/html/header.html
@@ -13,7 +13,7 @@
             <h2>Find recipes based on items you already have in your cupboards.</h2>
 
             <form id="splash-form" class="search-form" method="GET" action="/recipe">
-                <input id="splash-search" name="id" type="text" placeholder="Search...">
+                <input id="splash-search" name="param" type="text" placeholder="Search...">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
@@ -23,9 +23,9 @@
     <div class="splash-featured-container">
 
         <div class="splash-featured">
-            <div class="featured-title">
+            <a href="" class="featured-title">
                 <h3> </h3>
-            </div>
+            </a>
 
             <div class="featured-content">
                 <div class="featured-text">
@@ -34,10 +34,10 @@
                     <a href="">Read more...</a>
                 </div>
                 <div class="featured-side">
-                    <div class="featured-img">
-                        <img src="../img/featured_sample_tonkatsu.jpg" alt="">
+                    <a href="" class="featured-img">
+                        <img src="" alt="">
                         <div class="img-overlay"></div>
-                    </div>
+                    </a>
                     <div class="featured-stars">
                         <p class="star-rating" data-content="2.5">
                             <span>★</span>
