--- a/public/html/pages/index/index.html
+++ b/public/html/pages/index/index.html
@@ -1,40 +1,67 @@
-<!DOCTYPE html>
+<section>
+  <h1>Heloust Wöörld</h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore eligendi exercitationem consectetur rem? Corrupti
+    consectetur dignissimos enim velit in, veniam autem quidem, inventore, fuga impedit harum vitae repellat libero
+    distinctio.</p>
 
-  <section>
-    <h1>Heloust Wöörld</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore eligendi exercitationem consectetur rem? Corrupti consectetur dignissimos enim velit in, veniam autem quidem, inventore, fuga impedit harum vitae repellat libero distinctio.</p>
+  <h2>Lorem ipsum</h2>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto minus, soluta consectetur facere error at quisquam
+    rem praesentium autem optio repellat quam sit facilis perferendis recusandae quae dolores similique ducimus.</p>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur nostrum quo atque obcaecati minima
+    architecto quasi facere quis, illo quod dicta nam, iure recusandae numquam non repellat? Reprehenderit, praesentium
+    maxime.</p>
 
-    <h2>Lorem ipsum</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto minus, soluta consectetur facere error at quisquam rem praesentium autem optio repellat quam sit facilis perferendis recusandae quae dolores similique ducimus.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur nostrum quo atque obcaecati minima architecto quasi facere quis, illo quod dicta nam, iure recusandae numquam non repellat? Reprehenderit, praesentium maxime.</p>
+  <h3>Lorem ipsum</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum
+    praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda.
+    Praesentium.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium
+    veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi,
+    consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
 
-    <h3>Lorem ipsum</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda. Praesentium.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi, consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
+  <h3>Lorem ipsum</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum
+    praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda.
+    Praesentium.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium
+    veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi,
+    consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
 
-    <h3>Lorem ipsum</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda. Praesentium.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi, consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
+  <h3>Lorem ipsum</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum
+    praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda.
+    Praesentium.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium
+    veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi,
+    consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
 
-    <h3>Lorem ipsum</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda. Praesentium.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi, consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
+  <h3>Lorem ipsum</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum
+    praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda.
+    Praesentium.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium
+    veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi,
+    consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
 
-    <h3>Lorem ipsum</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda. Praesentium.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi, consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
+  <h3>Lorem ipsum</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum
+    praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda.
+    Praesentium.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium
+    veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi,
+    consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
 
-    <h3>Lorem ipsum</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda. Praesentium.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi, consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
-
-    <h3>Lorem ipsum</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda. Praesentium.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi, consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
-  </section>
+  <h3>Lorem ipsum</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, corporis animi quasi libero sint eos eum
+    praesentium blanditiis laudantium nam veritatis maxime, unde velit inventore quod, nihil quis assumenda.
+    Praesentium.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni in illum beatae illo deleniti laudantium
+    veniam atque dicta eligendi voluptas, placeat error, sit perferendis, odit quibusdam dignissimos vitae rem.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum quod fuga totam quos a eveniet eligendi,
+    consequatur numquam tempore ad perspiciatis reiciendis! Rem vitae consectetur id dolorem reiciendis commodi?</p>
+</section>
