--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -9,9 +9,8 @@
 
         <ul>
             <li class="current-page-nav"><a href="/">Home</a></li>
+            <li><a href="/recipes">Recipes</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/gallery">Gallery</a></li>
-            <li><a href="/contact">Contact</a></li>
         </ul>
     </div>
 </nav>
