starting to work on recipe section

--- a/public/html/pages/recipe/recipe.html
+++ b/public/html/pages/recipe/recipe.html
@@ -1,4 +1,4 @@
-<section class="recipe-container">
+<section class="recipe recipe-container">
     <h1>${recipe.title}</h1>
     <p>${recipe.text}</p>
     <p>Written by: ${recipe.writer}</p>
