more work on mobile recipe section

--- a/public/html/miniheader.html
+++ b/public/html/miniheader.html
@@ -12,7 +12,7 @@
                 </h1>
             </div>
 
-            <h2 class="mini-header">Find recipes based on items you already have in your cupboards.</h2>
+            <!-- <h2 class="mini-header">Find recipes based on items you already have in your cupboards.</h2> -->
         </div>
 
     </div>
