--- a/public/html/pages/recipe/recipe.html
+++ b/public/html/pages/recipe/recipe.html
@@ -1,8 +1,8 @@
 <section class="recipe recipe-container">
-    <h1>${recipe.title}</h1>
+    <h1 class="recipe-title"></h1>
 
-    <div class="recipe-ingredients">
-
+    <div class="recipe-image">
+        <img src="../img/featured_sample_omelette.jpg" alt="">
     </div>
 
     <div class="recipe-info">
@@ -20,8 +20,8 @@
         <div class="featured-submitter">Submitted by <a href="">${recipe.writer}</a></div>
     </div>
 
-    <div class="recipe-image">
-        <img src="../img/featured_sample_omelette.jpg" alt="">
+    <div class="recipe-ingredients">
+
     </div>
 
     <div class="recipe-text">
