get random recipe for /recipe/x

--- a/public/html/footer.html
+++ b/public/html/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer id="about">
     <div class="footer-container">
         <div class="footer-content">
             <h3>ABOUT RECIPAIR</h3>
