recipe page dynamic image

--- a/public/html/pages/recipe/recipe.html
+++ b/public/html/pages/recipe/recipe.html
@@ -2,7 +2,7 @@
     <h1 class="recipe-title"></h1>
 
     <div class="recipe-image">
-        <img src="../img/featured_sample_omelette.jpg" alt="">
+        <img src="" alt="">
     </div>
 
     <div class="recipe-info">
