nav dynamic url

--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -10,7 +10,7 @@
         <ul>
             <li class="current-page-nav"><a href="/">Home</a></li>
             <li><a href="/recipe/x">Recipes</a></li>
-            <li><a href="/#about">About</a></li>
+            <li><a id="link-to-about" href="/#about">About</a></li>
         </ul>
     </div>
 </nav>
