--- a/public/html/header.html
+++ b/public/html/header.html
@@ -62,5 +62,5 @@
 
     </div>
 
-    <script src="/scripts/header.js" defer></script>
+    <script type="module" src="/scripts/header.js" defer></script>
 </header>
