--- a/public/html/footer.html
+++ b/public/html/footer.html
@@ -11,6 +11,8 @@
         <p><a href="mailto:hege@example.com">pikkmai@example.com</a></p>
         </div>
     </div>
+
+    <script type="module" src="/scripts/footer.js" defer></script>
 </footer>
 
 </body>
