change ingredients to be aside

--- a/public/html/pages/recipe/recipe.html
+++ b/public/html/pages/recipe/recipe.html
@@ -20,10 +20,10 @@
         <div class="featured-submitter">Submitted by <a href="">${recipe.writer}</a></div>
     </div>
 
-    <div class="recipe-ingredients">
+    <aside class="recipe-ingredients">
         <h4>Ingredients:</h4>
 
-    </div>
+    </aside>
 
     <div class="recipe-text">
         
